<resources>
    <string name="app_name">HabitTrackerApp</string>
    <string name="name">Name</string>
    <string name="frequency">Frequency</string>
    <string name="day">Day</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="_1">1</string>
    <string name="repeats">Repeats</string>
    <string name="edit">Edit</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="add">Add</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="daily">DAILY</string>
    <string name="weekly">WEEKLY</string>
    <string name="monthly">MONTHLY</string>
    <string name="yearly">YEARLY</string>
    <string name="decrease">decrease</string>
    <string name="increase">increase</string>
    <string name="today">Today</string>
    <string name="current_progress">Current Progress</string>
    <string name="completion_rate">Completion Rate</string>
    <string name="progress">Progress</string>
    <string name="slash">/</string>
    <string name="personal_uppercase">PERSONAL</string>
    <string name="study_uppercase">STUDY</string>
    <string name="work_uppercase">WORK</string>
    <string name="health_uppercase">HEALTH</string>
    <string name="category">Category</string>
    <string name="all">All</string>
    <string name="health">Health</string>
    <string name="study">Study</string>
    <string name="work">Work</string>
    <string name="personal">Personal</string>
    <string name="current_streak">Current Streak</string>
    <string name="streaks">Streaks</string>
    <string name="your_best">Your Best</string>
    <string name="home_empty_text_placeholder">You don\'t have any habits scheduled</string>
    <string name="home_empty_text_placeholder_2">Click the + button to add new habit</string>
    <string name="frequency_empty_text_placeholder_2">You can add one from the Home page</string>
    <string name="search">Search</string>
    <string name="dash">-</string>
    <string name="no_end_date">No end date</string>
    <string name="completed">Completed</string>
    <string name="add_habit">Add Habit</string>
    <string name="edit_habit">Edit Habit</string>
    <string name="name_of_your_habit">Name of your habit:</string>
    <string name="frequency_of_your_habit">Frequency of your habit:</string>
    <string name="choose_a_category">Choose a Category:</string>
    <string name="today_s_progress">Today\'s progress:</string>
    <string name="startDate">startDate</string>
    <string name="endDate">endDate</string>
    <string name="eee">EEE</string>
    <string name="dd">dd</string>
    <string name="mmm">MMM</string>
    <string name="add_habit_icon">Add habit icon</string>
    <string name="empty_state_icon">Empty state icon</string>
    <string name="delete_habit_title">Delete this habit?</string>
    <string name="delete_habit_message">This habit will be permanently removed, all progress made will also be deleted.</string>
    <string name="cancel">Cancel</string>
</resources>