<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="@dimen/xs"
    android:layout_margin="@dimen/xs">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/xs">
        <TextView
            android:id="@+id/tvName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"/>
        <TextView
            android:id="@+id/tvCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/category"/>
        <TextView
            android:id="@+id/tvRepeats"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/repeats"/>
        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="@dimen/xxxxs"
            android:layout_marginVertical="@dimen/xxxs"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tvStartDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/start_date"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/xs"
                android:text="@string/dash"/>
            <TextView
                android:id="@+id/tvEndDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/end_date"/>
        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>