<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.myHabit.BaseFrequencyFragment">
    <EditText
        android:id="@+id/etSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/xs"
        android:background="@drawable/edit_text_bg"
        android:padding="@dimen/xxs"
        android:drawableStart="@drawable/ic_search"
        android:drawableTint="@color/light_grey"
        android:hint="@string/search"/>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvMyHabit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
        <LinearLayout
            android:id="@+id/llEmpty"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">
            <ImageView
                android:layout_width="@dimen/xxxxxxxxl"
                android:layout_height="@dimen/xxxxxxxxl"
                android:layout_marginBottom="@dimen/xs"
                android:src="@drawable/ic_sentiment_dissatisfied"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_empty_text_placeholder"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/frequency_empty_text_placeholder_2"/>
        </LinearLayout>
    </FrameLayout>
</LinearLayout>